# eleos

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  constants.py  cores.py  example_core_creation.py  example_result_parsing.py  main.py  preNemesis_v3.py  profiles.py  pyproject.toml  results.py  setup.py  shapes.py  submission.py  utils.py  version_bump.py
.github/workflows/: publish.yml
data/: radtrans_ids.csv
data/jupiter/: fcloud.ref  jupiter.ref
data/statics/: nemesis.cia  nemesis.inp  template.job
data/template_core/: aerosol.ref  logfile  miri.kls  nemesis.apr  nemesis.fla  nemesis.inp  nemesis.ref  nemesis.set  nemesis.spx  nemesis.xsc  nirspec.kls  parah2.ref
docs/: documentation.rst  index.rst  rebuild.sh  requirements.txt
docs/source/: conf.py  core_gen_example.rst  documentation.rst  eleos.rst  index.rst  installation.rst  multiple_core_creation.rst  multiple_core_examples.rst  multiple_result_parsing.rst  result_parse_example.rst  single_core_creation.rst  single_core_examples.rst  single_result_parsing.rst
eleos/: __init__.py  __main__.py  ch4.py  constants.py  cores.py  mcmc.py  parsers.py  profiles.py  results.py  shapes.py  spectra.py  spx.py  utils.py
eleos/data/: radtran_ids.csv
examples/: create_core_from_previous.py  multiple_core_creation.py  multiple_result_parsing.py  sensitivity_analysis_creation.py  sensitivity_analysis_results.py  single_core_creation.py  single_result_parsing.py
nemesis_eleos/: __init__.py  core_create_example.py  cores.py  profiles.py  result_parse_example.py  results.py  spx.py
nemesis_eleos.egg-info/: PKG-INFO  SOURCES.txt
(+74 files in other folders)
