[build-system]
requires = ["setuptools>=61.0", "pandas", "matplotlib", "numpy", "astropy"]
build-backend = "setuptools.build_meta"

[project]
name = "nemesis_eleos"
version = "0.7.2"
authors = [
  { name="Simon Toogood", email="scat2@leicester.ac.uk" },
]
description = "A Python interface to the NEMESIS spectral inversion tool"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">= 3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/simon-toogood/eleos"

[tools.setuptools]
include-package-data = true

